move post to school

--- a/_posts/2019-09-20-Automata1-0.markdown
+++ b/_posts/2019-09-20-Automata1-0.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "오토마타 1장"
 date:   2019-09-20 20:05:17 +0900
-categories: etc
+categories: school
 author: "CodeJin19"
 ---
 이번 학기에 듣는 전공 내용을 블로그에 정리해보고자 한다.
