--- a/_posts/2019-09-28-Automata1-1_1.markdown
+++ b/_posts/2019-09-28-Automata1-1_1.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "오토마타 1장1절 - 1"
 date:   2019-09-28 21:25:25 +0900
-categories: etc
+categories: school
 author: "CodeJin19"
 ---
 # 1.1 Mathematical preliminaries and notation
