--- a/_posts/2019-10-08-Automata1-1_3.markdown
+++ b/_posts/2019-10-08-Automata1-1_3.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "함수와 관계"
 date:   2019-10-8 22:30:24 +0900
-categories: etc
+categories: school
 author: "CodeJin19"
 ---
 # Functions and Relations (함수와 관계)
